--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.0.1",
     "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.2",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-google-places-autocomplete": "^4.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7"
   },
